@@ -1,3 +1,14 @@
+2019-08-29  Chris Dumez  <cdumez@apple.com>
+
+        Use inline data member initialization in ProcessLauncher
+        https://bugs.webkit.org/show_bug.cgi?id=201247
+
+        Reviewed by Ryosuke Niwa.
+
+        * UIProcess/Launcher/ProcessLauncher.cpp:
+        (WebKit::ProcessLauncher::ProcessLauncher):
+        * UIProcess/Launcher/ProcessLauncher.h:
+
 2019-08-28  Said Abou-Hallawa  <sabouhallawa@apple.com>
 
         All image drawing functions should take an argument of type ImagePaintingOptions
